2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/planned_downtime.list.php: fixed the lost data
	from planned downtime, show in the table of audits.
	
	Fixes: #3607608

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_tags.php: fixed the function
	"tags_get_acl_tags_module_condition" when the user profile is in
	the all group.
	
	* include/functions_reporting.php, include/functions_alerts.php,
	operation/agentes/estado_monitores.php: improve the code style.

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor_common.php: show only the
	tags that the user has.
	
	Fixes: #3607617
	
	* include/functions_tags.php: cleaned source code style.

2013-03-11  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/libupdate_manager_client.php,
	  extensions/update_manager/lib/xmlrpc/xmlrpc.inc: Added HTTP redirect
	 support. It fixes an issue that update manager behind http proxy
	 failed to communicate with update server due to the server's
	 "301 Moved Permanently" HTTP response.

	Merged from: branch_4.0

2013-03-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/planned_downtime.list.php: added event when some
	user stop a downtime manuallity.
	
	Fixes: #3607163

2013-03-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/constants.php, include/functions_reporting.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/reporting/reporting_builder.php: into the report element
	"exception" added more conditions and rewrote the code.
	
	Fixes: #3607172

2013-03-08  Sergio Martin <sergio.martin@artica.es>

	* include/ajax/events.php
	include/graphs/flot/pandora.flot.js: Improve the view
	of events information in flot graphs for bug 3607101

	* godmode/agentes/module_manager_editor_network.php
	godmode/modules/manage_network_components_form.php
	godmode/modules/manage_network_components_form_network.php: Fix